fix: use relative axios baseURL through Vite proxy, expand CORS allowed origins